pkl-core/src/test/files/LanguageSnippetTests/input/errors/const/constTypeAliasConstraint.pkl
typealias MyValue = Any(isValid)

isValid = true

myValue: MyValue = 1
